readme: version require

--- a/README.org
+++ b/README.org
@@ -1,1 +1,2 @@
-A Julia rewrite of Andreas Schaab and Allen T.Zhang's SparseEcon Toolkit https://github.com/schaab-lab/SparseEcon.
+A Julia rewrite of Andreas Schaab and Allen T.Zhang's SparseEcon Toolkit
+https://github.com/schaab-lab/SparseEcon. Requires Julia version >= 1.9.0
